<resources>
    <string name="app_name">Running</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_login_screen">LoginScreen</string>

    <string name="hint">Email Adress</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="label">FORGOT PASSWORD?</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="km_nr">101.4</string>
    <string name="totalkm">TOTAL KILOMETERS</string>
    <string name="totalrunsnr">13</string>
    <string name="totalruns">TOTAL RUNS</string>
    <string name="avgpacenr">7\'05\'\'</string>
    <string name="avgpace">AVG PACE</string>
    <string name="avgnikefuelnr">1923</string>
    <string name="avgnikefuel">AVG NIKEFUEL</string>
    <string name="date">NOVEMBER 2015</string>
    <string name="comm">Compare and compete with your friends by adding them on Nike+</string>

</resources>
