<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="horizontal"
    tools:context="com.devacademy.running.LoginScreen"
    >



    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:background="@drawable/nikelogo"
            android:layout_marginTop="20dp"

            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/hint"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFF"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/password"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="#FFF"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_margin="20dp"
            android:textColor="#FFF"
            android:background="#000"
            android:id="@+id/loginButton"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000"
            android:layout_margin="20dp"
            android:textAllCaps="true"
            android:gravity="center"
            />

    </LinearLayout>
</RelativeLayout>
